fix image width on safari

--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -45,6 +45,7 @@
   }
 
   &__image {
+    width: 100%;
 
     &--mini {
       max-height: 134px;
